46.1 regression: Wayland primary selection doesn't work well
Affected version
- OS: Arch Linux
- Mutter: 46.1
- Window system: Wayland
Bug summary
The wayland's primary selection copy-paste sometimes doesn't work when the window is maximized or full screen.
Steps to reproduce
- Open a
gnome-terminal
and maximized or full screen window. - Open a
gedit
. - Selection a text in
gnome-terminal
. - Switch to
gedit
window and click mouse middle button. - Repeats step 3 and step 4.
What happened
Sometimes the text pasted into gedit
is not the latest selected.
What did you expect to happen
Always paste latest selected text.
Relevant logs, screenshots, screencasts etc.
This issue is caused by patch 9bdb00c4 (!3707 (merged))
Edited by hev